--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Daftar bo togel online resmi serta memiliki hadiah 10jt dengan minimal betting 100 perak sangat mudah jp dan jp berapapun pasti di bayarkan dengan lunas." />
         <meta name="keywords" content="togel,togel online,bandar togel,bandar togel online,link togel,link bandar togel,daftar togel,link daftar togel,link daftar togel online,togel 4d 10 juta,pasti jp" />
         <link rel="canonical" href="http://togel-online.hudsonhouseinn.com/" />
-        <link rel="amphtml" href="https://slotdemo.life/toto/amp2/">
+        <link rel="amphtml" href="https://slotdemo.life/pro/amp2/">
         <meta name="robots" content="index, follow" />
         <link rel="alternate" hreflang="id" href="http://togel-online.hudsonhouseinn.com/" />
         <meta name="page-locale" content="id, en">
